--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
@@ -56,7 +56,7 @@ https://templatemo.com/tm-548-training-studio
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                          <a href="index.html" class="logo">Road   <em> Accident</em></a>
+                          <a href="{{url_for('first')}}" class="logo">Road   <em> Accident</em></a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
@@ -158,7 +158,7 @@ https://templatemo.com/tm-548-training-studio
       <div class="row">
 
         <!-- Portfolio Item 1 -->
-        <div class="col-md-6 col-lg-4 col-12" style="margin-left:300px">
+        <div class="col-md-6 col-lg-4 col-12" style="margin: 0 auto; float: none;">
             
             <!-- Flash Messages -->
             {% with messages = get_flashed_messages(with_categories=true) %}
@@ -190,8 +190,8 @@ https://templatemo.com/tm-548-training-studio
                 <br>
                 <div class="control-group text-center-mobile">
                     <!-- Button -->
-                    <div class="controls">
-                        <input type="submit" class="btn btn-success" value="Login" style="margin-left: 200px; padding: 10px 30px;">
+                    <div class="controls" style="text-align: center;">
+                        <input type="submit" class="btn btn-success" value="Login" style="padding: 10px 30px;">
                     </div>
                 </div>
             </form>
@@ -199,9 +199,7 @@ https://templatemo.com/tm-548-training-studio
             <!-- Register Link -->
             <div class="control-group">
                 <div class="controls" style="text-align: center; margin-top: 20px;">
-                    <p style="color: #fff;">Don't have an account? 
-                        <a href="{{url_for('register')}}" style="color: #ed563b; font-weight: bold;">Register here</a>
-                    </p>
+                    <a href="{{url_for('register')}}" style="color: #ed563b; font-weight: bold; text-decoration: none; display: inline-block;">Register here</a>
                 </div>
             </div>
   </div>
